[project]
name = "todo-backend"
version = "0.2.0"
description = "Добавлен функционал регистрации и аутентификации"
authors = [
    {name = "Roo10iuM",email = "danil5400000@gmail.com"}
    {name = "Ariandel",email = "ilya.prudskikh2@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "sqlalchemy[asyncio] (>=2.0.35,<3.0.0)",
    "alembic (>=1.13.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "httpx (>=0.27.2,<0.28.0)",
    "pytest (>=8.3.3,<9.0.0)",
    "pytest-asyncio (>=0.24.0,<0.25.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
